--- a/package.json
+++ b/package.json
@@ -28,14 +28,20 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/react-stripe-js": "^2.4.0",
     "@types/react-world-flags": "^1.4.5",
     "@vitejs/plugin-react": "^4.2.0",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "cookies-next": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.294.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
@@ -43,8 +49,10 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "react-spinners": "^0.13.8",
+    "react-svg-credit-card-payment-icons": "^2.1.3",
     "react-toastify": "^9.1.3",
     "react-world-flags": "^1.6.0",
+    "sweetalert2": "^11.10.2",
     "tailwind-merge": "^2.1.0",
     "uuid": "^9.0.1",
     "yup": "^1.3.2",
@@ -63,6 +71,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.32",
+    "sass": "^1.69.6",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
