--- a/package.json
+++ b/package.json
@@ -39,12 +39,17 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "cookies-next": "^4.1.0",
+    "framer-motion": "^11.0.3",
+    "i18next": "^23.7.20",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-i18next": "^14.0.1",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
