--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "cookies-next": "^4.1.0",
+    "framer-motion": "^11.0.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
@@ -46,6 +47,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.5.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "react-spinners": "^0.13.8",
